juc: ReentrantLock