@@ -2,77 +2,81 @@ package Question_03;
 
 import java.util.LinkedList;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
 /**
  * ReentrantLock的condition本质就是不同的等待队列
  * 可以让线程进入指定的等待队列，也可以指定唤醒某个等待队列里面的线程
  */
-public class Solution_02_ReentrantLock {
-    final private int MAX_SIZE = 10;
-    private List<Object> list = new LinkedList<>();
-    private int size = 0;
+public class Solution_02_ReentrantLock<T> {
+    final private LinkedList<T> lists = new LinkedList<>();
+    final private int MAX = 10; //最多10个元素
+    private int count = 0;
 
-    private ReentrantLock lock = new ReentrantLock();
+    private Lock lock = new ReentrantLock();
     private Condition producer = lock.newCondition();
     private Condition consumer = lock.newCondition();
 
-    public void put(Object o) {
+    public void put(T t) {
         try {
             lock.lock();
-            if (size == MAX_SIZE) {
-                try {
-                    producer.await();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
+            while(lists.size() == MAX) { //想想为什么用while而不是用if？
+                producer.await();
+                System.out.println("++");
             }
-            list.add(o);
-            size++;
-            consumer.signalAll();
+
+            lists.add(t);
+            ++count;
+            consumer.signalAll(); //通知消费者线程进行消费
+        } catch (InterruptedException e) {
+            e.printStackTrace();
         } finally {
             lock.unlock();
         }
     }
 
-    public Object get() {
+    public T get() {
+        T t = null;
         try {
             lock.lock();
-            if (size == 0) {
-                try {
-                    consumer.await();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
+            while(lists.size() == 0) {
+                consumer.await();
+                System.out.println("--");
             }
-            Object o = list.remove(0);
-            size--;
-            producer.signalAll();
-            return o;
+            t = lists.removeFirst();
+            count --;
+            producer.signalAll(); //通知生产者进行生产
+        } catch (InterruptedException e) {
+            e.printStackTrace();
         } finally {
             lock.unlock();
         }
-
+        return t;
     }
 
     public static void main(String[] args) {
-        Solution_02_ReentrantLock solution = new Solution_02_ReentrantLock();
-        for (int i = 0; i < 2; i++) {
-            new Thread(() -> {
-                for (int j = 0; j < 20; j++) {
-                    solution.put(j);
-                }
-            }).start();
+        Solution_02_ReentrantLock<String> obj = new Solution_02_ReentrantLock<>();
+        //启动消费者线程
+        for(int i=0; i<10; i++) {
+            new Thread(()->{
+                for(int j=0; j<5; j++) System.out.println(obj.get());
+            }, "c" + i).start();
         }
 
-        for (int i = 0; i < 10; i++) {
-            new Thread(() -> {
-                while(true) {
-                    Object o = solution.get();
-                    System.out.println(o.toString());
-                }
-            }).start();
+        try {
+            TimeUnit.SECONDS.sleep(2);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        //启动生产者线程
+        for(int i=0; i<2; i++) {
+            new Thread(()->{
+                for(int j=0; j<25; j++) obj.put(Thread.currentThread().getName() + " " + j);
+            }, "p" + i).start();
         }
     }
 }
